# crewai_bots2tools

./: .env  README.md  ai_llms_research.md  ex  form_parser_agent.py  form_parser_crew.py  output.json  output2.json  pyproject.toml  report.md
knowledge/: user_preference.txt
src/latest_ai_development/: Highlight.py  api_invoke.py  change_persona.py  compare_docs.py  crew.py  curr_balance.py  doc_classify.py  elaboration.py  face_recog.py  fetch_api.py  finance_transform_tool.py  functional_bugs.py  main.py  make_correction.py  merge.py  performance_bugs.py  security_bugs.py  summarize.py  translate.py  xmltojson.py
src/latest_ai_development/Merging/: 1.csv  2.csv  3.csv  merged_bank_statements.csv
src/latest_ai_development/config/: agents.yaml  tasks.yaml
src/latest_ai_development/inputs/: Book2.xlsx  input.xlsx
src/latest_ai_development/outputs/: input_output.csv  input_output_with_balance.csv  output.csv  output_with_balance.csv
src/latest_ai_development/tools/: __init__.py  custom_tool.py  too.py
