[project]
name = "latest_ai_development"
version = "0.1.0"
description = "latest-ai-development using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate>=1.6.0",
    "crewai[tools]>=0.108.0,<1.0.0",
    "deep-translator>=1.11.4",
    "googletrans>=4.0.2",
    "langchain-groq>=0.3.1",
    "litellm>=1.60.2",
    "too>=0.0.1",
    "tools>=0.1.9",
    "torch>=2.6.0",
    "transformers>=4.46.3",
    "xmltodict>=0.14.2",
]

[project.scripts]
latest_ai_development = "latest_ai_development.main:run"
run_crew = "latest_ai_development.main:run"
train = "latest_ai_development.main:train"
replay = "latest_ai_development.main:replay"
test = "latest_ai_development.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
